# Obelixis

./: Cargo.toml
src/: main.rs
src/config/: mod.rs
src/file/: mod.rs
src/network/: mod.rs
src/output/: mod.rs
src/process/: mod.rs
src/services/: mod.rs
src/system/: mod.rs
