[package]
name = "obelixis"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
sysinfo = "0.30"
walkdir = "2.5"
sha2 = "0.10"
md5 = "0.7"
sha1 = "0.10"
flate2 = "1.0"
reqwest = { version = "0.11", features = ["json"] }
